--- a/index.html
+++ b/index.html
@@ -47,9 +47,17 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/norikog3" target="_blank"
+            >Noriko Garratt</a
+          >
+          and is
+          <a href="https://github.com/norikog3/week6sandbox" target="_blank">
+            on GitHub</a
+          >
+          and
+          <a href="https://stately-frangollo-2076cb.netlify.app" target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
